jitfailure-dolfin_expression_e99fbc30e21e8074ba79a26c98bc6d22/error.log
/tmp/tmp18guog_h/dolfin_expression_e99fbc30e21e8074ba79a26c98bc6d22.cpp: In member function 'virtual void dolfin::dolfin_expression_e99fbc30e21e8074ba79a26c98bc6d22::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp18guog_h/dolfin_expression_e99fbc30e21e8074ba79a26c98bc6d22.cpp:61:28: error: invalid type argument of unary '*' (have 'int')
   61 |           values[0] = x[0]**2;
      |                            ^~
